# ownProgbase

./: README.md
 chat/build_server/: chAppServer
 chat/chApp/: chApp
 chat/gui_v2.0/: aboutwindow.cpp  aboutwindow.ui  chApp.pro  chApp_ru.qm  chatwindow.cpp  chatwindow.cpp.autosave  chatwindow.h  chatwindow.ui  gui.cpp  logindialog.cpp  logindialog.ui  myResources.qrc
 chat/gui_v2.0/Translations/: chApp_en.qm  chApp_en.ts  chApp_ru.qm  chApp_ru.ts  chApp_ua.qm  chApp_ua.ts
 chat/server/room/: room.cpp
chApp/chApp/: Makefile  chApp  moc_NetClient.cpp  moc_aboutwindow.cpp  moc_chatwindow.cpp  moc_logindialog.cpp  ui_aboutwindow.h  ui_chatwindow.h  ui_logindialog.h
chat/: About.md
progbase/labs/lab1/: first.c  fourth.c  lab_1_protocol.docx  second.c  third.c
progbase/labs/lab2/: lab2.c  lab2_protocol.docx
progbase/labs/lab3/: lab3_protocol.docx
progbase/labs/lab3/files_lab3/: LAB_3  Makefile  assert_func.c  assert_func.h  function.c  function.h  main.c  menu.c  menu.h  read.txt
progbase/tasks/arrays/: array.c
progbase/tasks/console_paint/: console_paint.c
progbase/tasks/data_repr/: values.txt
progbase/tasks/dyn_mem/: dyn_mem.c
progbase/tasks/files/: files.c  output_file.txt  read_file.txt
progbase/tasks/math/: main.c
progbase/tasks/matrix_paint/: matrix_paint.c
progbase/tasks/numeral_systems/: results.txt
progbase/tasks/recursion/: recursion.c
progbase/tasks/strings_simple/: strings_simple.c
progbase2/labs/: CMakeLists.txt
progbase2/labs/Lab6/: Lab6.pro  mainwindow.cpp.autosave  university.cpp  university.h
progbase2/labs/lab4/: CMakeLists.txt  input.txt  main.c  result.txt
progbase2/labs/lab4/include/: convert.h  cui.h  list.h  storage.h
progbase2/labs/lab4/src/: convert.c  cui.c  list.c  storage.c
progbase2/labs/lab4/tests/: test.c
progbase2/labs/lab5/: CMakeLists.txt  a.out  main.c  new.xml  source.json  source.xml  stanf.json
progbase2/labs/lab5/include/: convert.h  cui.h  list.h  storage.h  test.h
progbase2/labs/lab5/src/: convert.c  cui.c  list.c  storage.c  test.c
progbase2/tasks/callback/: a.out  main.c  settings.json
progbase2/tasks/cpp/: CMakeLists.txt  main.cpp
progbase2/tasks/cpp/include/: sphere.h
progbase2/tasks/cpp/src/: sphere.cpp
progbase2/tasks/events/: CMakeLists.txt  Doxyfile  README.md  main.c
progbase2/tasks/events/include/: events.h  list.h
progbase2/tasks/events/samples/: basic.c  basic_input.c  many_handlers.c
progbase2/tasks/events/src/: events.c
progbase2/tasks/json/: CMakeLists.txt  driver.json  main.c
progbase2/tasks/json/include/: JsonLoader.h  list.h
progbase2/tasks/json/src/: JsonLoader.c  list.c
progbase2/tasks/nlp/: .gcc-flags.json  Makefile  a.out  list.c  list.h  list.h.gch  main.c  new.txt  nlp.c  nlp.h  nlp.h.gch  result.txt
progbase2/tasks/qt_windows/build-qt_windows-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  qt_windows  ui_mainwindow.h
progbase2/tasks/qt_windows/qt_windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_windows.pro  taxidriver.cpp  taxidriver.h
progbase2/tasks/xml/: CMakeLists.txt  main.c
progbase2/tasks/xml/include/: list.h  xml.h
progbase2/tasks/xml/src/: list.c  xml.c
